<?xml version="1.0"?>
<package format="3">
  <name>hba</name>
  <version>1.0.1</version>
  <description>The hierarchical bundle adjustment package</description>
  
  <maintainer email="xliuaa@connect.hku.hk">Xiyuan Liu</maintainer>
  
  <license>GPLv2</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag2_cpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>